Closed Bug 1841297 Opened 1 year ago Closed 9 months ago

Firefox fails WPT css/css-grid/subgrid/grid-gap-011.html

Categories

(Core :: Layout: Grid, defect)

defect

Tracking

()

RESOLVED FIXED
123 Branch
Tracking Status
firefox123 --- fixed

People

(Reporter: twisniewski, Assigned: TYLin)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

Severity: -- → S3

Live link to test:
http://wpt.live/css/css-grid/subgrid/grid-gap-011.html

We render two separate blue squares. The right one is at the same position as other browsers (offsetLeft = 283). The left one we render further leftwards than other browsers (offsetLeft=133)

The test is testing "subgrids with column gap larger than the track size", per its title. We seem to be interoperable up until the gap reaches the track size, and then with larger values, we start moving the first grid item leftwards, which is not what the test expects.

Component: CSS Parsing and Computation → Layout: Grid

grid-gap-012.html is adapted from grid-gap-011.html, but with subgrid's gap
changed to 250px. Both Chrome and Safari pass the test. It coverts the position
fix for lastTrack.

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/d0a378b117e0 Fix subgrid position when the gap is larger than track size. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/43775 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: